Ep 1 - 6: Component, System, Resource, Event (#1)
* fix tests

* Update package name

* Add bevy-ball assets

* Update readme.md

* Remove template code

* Move assets to root

* episode 2

* Add WindowHelper

* trivial reorder

* ep3: player movement + helper

* ep3: player confinement

* Add RandomHelper

* ep3: spawn enemies

* ep4: enemy movement

* ep4: update enemy direction

* ep4: confine enemy

* ep4: play sound on enemy bounce

* ep4: player despawn when hit

* ep 5: spawn star

* ep 5: collect star

* ep 5: score, score default, and on change printing

* ep 5: star spawn timer and spawn star overtime

* ep 6: spawn enemy overtime

* ep 6: example event

* Custom Despawn component

* ep 6: custom event and passing value to an event

* ep 6: high scores - demonstrating that single event can be read by many systems

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "bevy-skeleton"
+name = "bevy-ball"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bevy = "0.13.2"
+rand = "0.8.5"
